update spring build jar